[DDW-557] Correct epochs behind styling

--- a/source/renderer/app/components/status/BlockConsolidationStatus.scss
+++ b/source/renderer/app/components/status/BlockConsolidationStatus.scss
@@ -154,6 +154,7 @@
   position: absolute;
   right: 80px;
   width: 0;
+  z-index: 1;
 
   p {
     left: 8px;
